prevent unnecessary vertical scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ body {
 	background: #fff url(../images/logo-bg.png) no-repeat 50% 10em;
 	margin: 1em auto;
 	max-width: 940px;
-	min-height: 100%;
+	min-height: 95%;
 	overflow: hidden;
 	position: relative;
 	
